--- a/html-css/arts-and-crafts/index.html
+++ b/html-css/arts-and-crafts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href='crafts.css' type='text/css' rel='stylesheet'>
+  <link href='styles.css' type='text/css' rel='stylesheet'>
   <title>Dasmoto's Arts and Crafts</title>
 </head>
 
