--- a/javascript/rock-paper-scissors/index.html
+++ b/javascript/rock-paper-scissors/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rock, Paper, Scissors</title>
+  <title>Rock, Paper, Scissors</title>
+  <script src="script.js"></script>
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<p>Rock paper scissors is a classic two player game. Each player chooses either rock, paper, or scissors. The items are compared, and whichever player chooses the more powerful item wins.</p>
-
-<p>The possible outcomes are:</p>
-<ul>
-<li>Rock destroys scissors.</li>
-<li>Scissors cut paper.</li>
-<li>Paper covers rock.</li>
-<li>If there’s a tie, then the game ends in a draw.</li></ul>
-
-<p>Our code will break the game into four parts:</p>
-<ul>
-<li>Get the user’s choice.</li>
-<li>Get the computer’s choice.</li>
-<li>Compare the two choices and determine a winner.</li>
-<li>Start the program and display the results.</li></ul>
+<h1>Rock, Paper, Scissors</h1>
+<form>
+  <p>Input your choice here!</p>
+  <p>You have a choice of rock, paper, or scissors. (Just in case you didn't know.)</p>
+  <input type="text" id="userchoice" name="userchoice">
+  <input type="submit" value="Submit">
+</form>
 </body>
 
 </html>
