--- a/html-css/tea-cozy/index.html
+++ b/html-css/tea-cozy/index.html
@@ -5,5 +5,24 @@
 </head>
 
 <body>
+  <header>
+  <h1>Tea Cozy</h1>
+  <ul>
+    <li>Mission</li>
+    <li>Featured Tea</li>
+    <li>Locations</li>
+  </ul>
+  <header>
+
+<div class="mission">
+  <h2>Our Mission</h2>
+  <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+</div>
+
+<div class="monthly-tea">
+  <h2>Tea of the Month</h2>
+  <h4>What's Steeping at The Tea Cozy?</h4>
+</div>
+
 </body>
 </html>
